--- a/index.html
+++ b/index.html
@@ -3,207 +3,344 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Feria de Emprendimientos</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <title>Feria Virtual de Emprendedores</title>
   <style>
+    :root {
+      --color1: #da6863;
+      --color2: #4d3069;
+      --color3: #24496e;
+      --color4: #f3efdc;
+      --shadow: rgba(0,0,0,0.2);
+    }
     body {
-      background-color: #f3efdc;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: var(--color4);
+      color: var(--color3);
     }
     header {
-      text-align: center;
-      padding: 2rem;
-      background: #24496e;
+      background: var(--color2);
       color: white;
+      padding: 15px;
+      text-align: center;
     }
-    .card {
-      margin: 1rem;
-      border-radius: 15px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    header img {
+      max-height: 70px;
+      display: block;
+      margin: 0 auto 10px;
     }
-    .modal-content {
-      border-radius: 20px;
-      max-width: 600px;
-      margin: auto;
+    h1 {
+      margin: 0;
+      font-size: 1.5rem;
     }
-    .btn-custom {
-      border-radius: 10px;
-      margin: 0.3rem;
-    }
-    .hidden {
-      display: none;
-    }
-    #intro-screen {
+    .start-screen {
       display: flex;
       flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 80vh;
+      text-align: center;
+      padding: 20px;
+    }
+    .start-screen button {
+      margin-top: 20px;
+      padding: 15px 30px;
+      font-size: 1.2rem;
+      border: none;
+      border-radius: 12px;
+      background: var(--color1);
+      color: white;
+      cursor: pointer;
+      box-shadow: 0 4px 10px var(--shadow);
+      transition: transform 0.2s;
+    }
+    .start-screen button:hover {
+      transform: scale(1.05);
+    }
+    .filters {
+      display: flex;
+      justify-content: center;
+      margin: 15px;
+    }
+    .filters select {
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid var(--color2);
+      font-size: 1rem;
+      width: 90%;
+      max-width: 400px;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      gap: 15px;
+      padding: 10px;
+    }
+    .card {
+      background: white;
+      border-radius: 12px;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 4px 12px var(--shadow);
+      cursor: pointer;
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 6px 18px var(--shadow);
+    }
+    .card.horizontal {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      border-radius: 12px;
+      padding: 15px;
+      margin-bottom: 10px;
+      box-shadow: 0 4px 12px var(--shadow);
+    }
+    .card.horizontal h3 {
+      margin: 0 0 0 15px;
+      font-size: 1rem;
+    }
+    .back-btn {
+      margin: 10px;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 8px;
+      background: var(--color3);
+      color: white;
+      font-size: 0.9rem;
+      cursor: pointer;
+      box-shadow: 0 3px 6px var(--shadow);
+    }
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      background: #fff;
+      padding: 10px;
     }
-    #intro-screen img {
-      max-width: 250px;
-      margin-bottom: 2rem;
+    .modal-content {
+      background: white;
+      padding: 25px;
+      border-radius: 16px;
+      max-width: 350px;
+      width: 100%;
+      box-shadow: 0 6px 20px var(--shadow);
+      text-align: center;
+      position: relative;
+    }
+    .modal-content h2 {
+      margin-top: 0;
+      color: var(--color2);
+    }
+    .modal-content .btn {
+      display: block;
+      width: 100%;
+      padding: 12px 0;
+      margin: 10px 0;
+      border: none;
+      border-radius: 10px;
+      font-weight: bold;
+      color: white;
+      cursor: pointer;
+      text-decoration: none;
+      font-size: 1rem;
+    }
+    .btn-instagram { background: #E1306C; }
+    .btn-whatsapp { background: #25D366; }
+    .modal-content p {
+      margin: 10px 0;
+      font-weight: bold;
+      color: var(--color3);
+    }
+    .close {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 1.5rem;
+      cursor: pointer;
+      color: var(--color1);
+    }
+    .subscribe {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: var(--color2);
+      text-align: center;
+      padding: 15px;
+      color: white;
+      box-shadow: 0 -3px 6px var(--shadow);
+    }
+    .subscribe a {
+      display: inline-block;
+      margin-top: 8px;
+      padding: 10px 20px;
+      background: var(--color1);
+      color: white;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <!-- Pantalla de inicio -->
-  <div id="intro-screen">
+  <header>
     <img src="logoferia.png" alt="Logo Feria">
-    <button class="btn btn-lg btn-primary" onclick="enterApp()">Ingresar a la app</button>
+    <h1>Feria Virtual de Emprendedores</h1>
+  </header>
+
+  <div id="startScreen" class="start-screen">
+    <img src="logoferia.png" alt="Logo Feria" style="max-width:200px; margin-bottom:20px;">
+    <button id="enterApp">Ingresar a la App</button>
   </div>
 
-  <!-- Contenido principal -->
-  <div id="main-app" class="hidden">
-    <header>
-      <h1>Feria de Emprendimientos</h1>
-      <p>Conocé y apoyá a los emprendedores de nuestra comunidad</p>
-    </header>
-
-    <div class="container my-4">
-      <div class="row mb-3">
-        <div class="col-md-6">
-          <select id="rubroFilter" class="form-select">
-            <option value="">Seleccionar Rubro</option>
-          </select>
-        </div>
-        <div class="col-md-6">
-          <select id="emprendimientoFilter" class="form-select">
-            <option value="">Seleccionar Emprendimiento</option>
-          </select>
-        </div>
-      </div>
-      <div id="cardsContainer" class="row"></div>
+  <div id="appContent" style="display:none;">
+    <div class="filters">
+      <select id="filter">
+        <option value="rubros">Orden alfabético - Rubros</option>
+        <option value="emprendedores">Orden alfabético - Emprendedores</option>
+      </select>
     </div>
-
-    <!-- Botón suscripción -->
-    <div class="text-center my-4">
-      <p>¿Querés sumarte a la red de emprendedores?</p>
-      <a href="https://cafecito.app/docentesbrown" target="_blank" class="btn btn-success btn-lg">
-        <i class="bi bi-cup-hot"></i> Sumate con un Cafecito
-      </a>
-      <p class="mt-2">Contacto: <strong>+54 11 2345-6789</strong></p>
-    </div>
+    <div id="backContainer"></div>
+    <div id="cards" class="grid"></div>
   </div>
 
   <!-- Modal -->
-  <div class="modal fade" id="infoModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content p-3">
-        <div class="modal-header">
-          <h5 id="modalTitle" class="modal-title"></h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-        <div class="modal-body">
-          <p id="modalDocente"></p>
-          <p><strong>Promo:</strong> <span id="modalPromo"></span></p>
-          <div class="d-flex justify-content-around mt-3">
-            <a id="modalInstagram" href="#" target="_blank" class="btn btn-custom btn-primary">
-              <i class="bi bi-instagram"></i> Instagram
-            </a>
-            <a id="modalWhatsapp" href="#" target="_blank" class="btn btn-custom btn-success">
-              <i class="bi bi-whatsapp"></i> WhatsApp
-            </a>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button class="btn btn-secondary" data-bs-dismiss="modal">
-            <i class="bi bi-arrow-left"></i> Volver
-          </button>
-        </div>
-      </div>
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span id="closeModal" class="close">&times;</span>
+      <h2 id="modalName"></h2>
+      <a id="modalInsta" class="btn btn-instagram" href="#" target="_blank">Instagram</a>
+      <a id="modalWpp" class="btn btn-whatsapp" href="#" target="_blank">WhatsApp</a>
+      <p id="modalDescuento"></p>
+      <p id="modalDocente"></p>
+      <button class="back-btn" onclick="closeModal()">Volver</button>
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Suscripción -->
+  <div class="subscribe">
+    <p>¿Querés sumarte a la red de emprendedores?</p>
+    <a href="https://cafecito.app/docentesbrown" target="_blank">Unite con un Cafecito ☕</a>
+    <p>Luego, contactanos al: <strong>+54 9 11 2345-6789</strong></p>
+  </div>
+
   <script>
+    const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTFrFDHPl6jTxhAPO30GrSiWv5hzN_I9cGHRI8ks2UDQAoyPd15DG2zKlt3G0bkgyDwAufS2fLCqnat/pub?gid=0&single=true&output=csv";
+
     let data = [];
 
-    function enterApp() {
-      document.getElementById("intro-screen").classList.add("hidden");
-      document.getElementById("main-app").classList.remove("hidden");
-    }
+    const rubroIcons = {
+      "Comida": "🍔",
+      "Ropa": "👕",
+      "Servicios": "💼",
+      "Artesanías": "🎨",
+      "Belleza": "💄",
+      "Educación": "📚",
+      "Tecnología": "💻",
+      "default": "⭐"
+    };
 
     async function loadData() {
-      const url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTFrFDHPl6jTxhAPO30GrSiWv5hzN_I9cGHRI8ks2UDQAoyPd15DG2zKlt3G0bkgyDwAufS2fLCqnat/pub?gid=0&single=true&output=csv";
-      const response = await fetch(url);
-      const text = await response.text();
+      const res = await fetch(SHEET_URL);
+      const text = await res.text();
       const rows = text.split("\n").map(r => r.split(","));
-      const headers = rows.shift();
-      data = rows.map(r => {
-        let obj = {};
-        headers.forEach((h,i) => obj[h.trim()] = r[i]?.trim());
-        return obj;
-      });
-      fillFilters();
-      renderCards();
+      data = rows.slice(1).map(r => ({
+        emprendimiento: r[0]?.trim(),
+        rubro: r[1]?.trim(),
+        instagram: r[2]?.trim(),
+        whatsapp: r[3]?.trim(),
+        descuento: r[4]?.trim(),
+        docente: r[5]?.trim()
+      })).filter(d => d.emprendimiento);
+      renderRubros();
     }
 
-    function fillFilters() {
-      const rubroFilter = document.getElementById("rubroFilter");
-      const emprendimientoFilter = document.getElementById("emprendimientoFilter");
-      const rubros = [...new Set(data.map(d => d.RUBRO))].sort();
-      const emprendimientos = [...new Set(data.map(d => d.EMPRENDIMIENTO))].sort();
-
-      rubros.forEach(r => {
-        let opt = document.createElement("option");
-        opt.value = r; opt.textContent = r;
-        rubroFilter.appendChild(opt);
-      });
-
-      emprendimientos.forEach(e => {
-        let opt = document.createElement("option");
-        opt.value = e; opt.textContent = e;
-        emprendimientoFilter.appendChild(opt);
-      });
-
-      rubroFilter.addEventListener("change", renderCards);
-      emprendimientoFilter.addEventListener("change", renderCards);
+    function renderRubros() {
+      const container = document.getElementById("cards");
+      const back = document.getElementById("backContainer");
+      container.className = "grid";
+      back.innerHTML = "";
+      const rubros = [...new Set(data.map(d => d.rubro))].sort();
+      container.innerHTML = rubros.map(r => `
+        <div class="card" onclick="renderEmprendedores('${r}')">
+          <h3>${rubroIcons[r] || rubroIcons.default} ${r}</h3>
+        </div>
+      `).join("");
     }
 
-    function renderCards() {
-      const rubro = document.getElementById("rubroFilter").value;
-      const emprendimiento = document.getElementById("emprendimientoFilter").value;
-      const container = document.getElementById("cardsContainer");
-      container.innerHTML = "";
-
-      let filtered = data.filter(d => 
-        (rubro === "" || d.RUBRO === rubro) &&
-        (emprendimiento === "" || d.EMPRENDIMIENTO === emprendimiento)
-      );
-
-      filtered.forEach(d => {
-        const card = document.createElement("div");
-        card.className = "col-md-4";
-        card.innerHTML = `
-          <div class="card p-3">
-            <h5>${d.EMPRENDIMIENTO}</h5>
-            <p><strong>Rubro:</strong> ${d.RUBRO}</p>
-            <button class="btn btn-outline-primary" onclick="showModal('${d.EMPRENDIMIENTO}')">
-              Ver más
-            </button>
-          </div>
-        `;
-        container.appendChild(card);
-      });
+    function renderEmprendedores(rubro) {
+      const container = document.getElementById("cards");
+      const back = document.getElementById("backContainer");
+      container.className = "grid";
+      back.innerHTML = `<button class="back-btn" onclick="renderRubros()">← Volver a Rubros</button>`;
+      const emps = data.filter(d => d.rubro === rubro).sort((a,b)=>a.emprendimiento.localeCompare(b.emprendimiento));
+      container.innerHTML = emps.map(e => `
+        <div class="card" onclick="showModal('${e.emprendimiento}')">
+          <h3>${e.emprendimiento}</h3>
+        </div>
+      `).join("");
     }
 
-    function showModal(emprendimiento) {
-      const empr = data.find(d => d.EMPRENDIMIENTO === emprendimiento);
+    function renderEmprendedoresAll() {
+      const container = document.getElementById("cards");
+      const back = document.getElementById("backContainer");
+      container.className = "";
+      back.innerHTML = "";
+      const emps = [...data].sort((a,b)=>a.emprendimiento.localeCompare(b.emprendimiento));
+      container.innerHTML = emps.map(e => `
+        <div class="card horizontal" onclick="showModal('${e.emprendimiento}')">
+          <h3>${e.emprendimiento}</h3>
+        </div>
+      `).join("");
+    }
+
+    function buildWhatsAppLink(number) {
+      if (!number) return "#";
+      number = number.replace(/[^0-9]/g, "");
+      if (!number.startsWith("549")) number = "549" + number;
+      return `https://wa.me/${number}`;
+    }
+
+    function showModal(name) {
+      const empr = data.find(d => d.emprendimiento === name);
       if (!empr) return;
-
-      document.getElementById("modalTitle").textContent = empr.EMPRENDIMIENTO;
-      document.getElementById("modalDocente").textContent = "Responsable: " + empr.DOCENTE;
-      document.getElementById("modalPromo").textContent = empr["DESCUENTO ESPECIAL"];
-      document.getElementById("modalInstagram").href = empr.INSTAGRAM;
-      document.getElementById("modalWhatsapp").href = `https://wa.me/${empr["CONTACTO DE WHATSAPP"].replace(/[^0-9]/g,"")}`;
-
-      const modal = new bootstrap.Modal(document.getElementById("infoModal"));
-      modal.show();
+      document.getElementById("modalName").textContent = empr.emprendimiento;
+      document.getElementById("modalInsta").href = empr.instagram.startsWith("http") ? empr.instagram : `https://instagram.com/${empr.instagram.replace("@","")}`;
+      document.getElementById("modalWpp").href = buildWhatsAppLink(empr.whatsapp);
+      document.getElementById("modalDescuento").textContent = `Promoción: ${empr.descuento}`;
+      document.getElementById("modalDocente").textContent = `Responsable: ${empr.docente}`;
+      document.getElementById("modal").style.display = "flex";
     }
 
-    loadData();
+    function closeModal() {
+      document.getElementById("modal").style.display = "none";
+    }
+
+    document.getElementById("closeModal").onclick = closeModal;
+
+    document.getElementById("filter").onchange = (e) => {
+      if (e.target.value === "rubros") renderRubros();
+      else renderEmprendedoresAll();
+    };
+
+    window.onclick = (e) => {
+      if (e.target === document.getElementById("modal")) {
+        closeModal();
+      }
+    };
+
+    document.getElementById("enterApp").onclick = () => {
+      document.getElementById("startScreen").style.display = "none";
+      document.getElementById("appContent").style.display = "block";
+      loadData();
+    };
   </script>
 </body>
 </html>
